leptos_macro/tests/ui/view/children_projection_error.stderr
error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnOnce`
  --> tests/ui/view/children_projection_error.rs:23:13
   |
23 | /             <Inner>
24 | |                 <Inmost name=name.clone()/>
   | |                              ---- closure is `FnOnce` because it moves the variable `name` out of its environment
25 | |             </Inner>
   | |                    ^
   | |                    |
   | |____________________this closure implements `FnOnce`, not `Fn`
   |                      the requirement to implement `Fn` derives from here
   |
   = note: required for `Rc<dyn std::ops::Fn() -> Fragment>` to implement `ToChildren<{closure@$DIR/tests/ui/view/children_projection_error.rs:23:13: 25:21}>`
